2025-05-12  Bart Schaefer  <schaefer@zsh.org>

	* 53602: Doc/Zsh/func.yo, Src/params.c, Test/K01nameref.ztst:
	Update "typeset -nu" behavior to always refer to parameters
	at a call level above the declaration of the named reference.

2025-05-09  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Src/params.c: fix bad pointer found by valgrind

	* 53568: Doc/Zsh/expn.yo, Doc/Zsh/params.yo, Src/params.c,
	Test/K01nameref.ztst: fix additional problems with references
	whose referent goes out of scope, add corresponding tests, and
	update documentation to better describe behavior and warn about
	potentially confusing usage

2025-05-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 53532: INSTALL, configure.ac: mark --enable-zsh-mem option
	as deprecated.

2025-05-05  Bart Schaefer  <schaefer@zsh.org>

	* 53557 (plus test): Src/params.c, Test/K01nameref.ztst:
	Fix one more scoping issue with "typeset -u -n" references

	* 53546 (plus test): Src/params.c, Test/K01nameref.ztst:
	Fix several errors when using "placeholder" named references
	declared at scopes surrounding the scope where they are assigned.

2025-05-04  dana@dana.is  <dana@dana.is>

	* Max Coplan: 53535: Util/helpfiles: fix builds with
	interactive manpagers

2025-05-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 53529: Test/A04redirect.ztst: Avoid using system area for
	non-existent files as permissions may affect the result.

2025-04-28  dana  <dana@dana.is>

	* unposted: README: add missed note about <<< redirection

	* 53527: Doc/Zsh/contrib.yo, Functions/Misc/zgetopt, NEWS,
	Test/Z04zgetopt.ztst: remove zgetopt (feature not ready)

2025-04-27  dana  <dana@dana.is>

	* unposted: Doc/Zsh/contrib.yo, Doc/Zsh/mod_zutil.yo:
	document zparseopts's lack of support for abbreviating long
	options

	* unposted: Doc/Zsh/contrib.yo: adjust zgetopt wording

	* 53516: Doc/Zsh/contrib.yo, Functions/Misc/zgetopt, NEWS,
	Test/Z04zgetopt.ztst: add zgetopt contrib function
